--- a/css/style.css
+++ b/css/style.css
@@ -1575,8 +1575,11 @@ a.back_to_top {
 }
 /*---------- Product Features Section---------*/
 .product-features {
-  background: #f1f1f1;
+  background:url("https://cdn.shopify.com/s/files/1/0554/4748/6669/files/white-bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   padding-bottom: 25px;
+  background-attachment: fixed;
 }
 .product-features .media {
   margin: 10px 0;
@@ -1662,7 +1665,7 @@ a.back_to_top {
 }
 @media (min-width: 1200px) {
   .product-features {
-    padding: 94px 0 82px;
+    padding: 34px 0 82px;
   }
   .product-features .product-features-title {
     font-size: 24px;
@@ -1757,12 +1760,14 @@ a.back_to_top {
 .recommended .recommended-big-img {
   margin-bottom: 20px;
 }
+
 .recommended .recommended-box {
   padding: 20px;
   margin-bottom: 20px;
   box-shadow: 0px 0px 23px -8px rgba(51, 51, 51, 0.34118);
+  border: 2px solid #cea752;
 }
-.recommended .recommended-box:before {
+/* .recommended .recommended-box:before {
   content: "";
   position: absolute;
   bottom: 0;
@@ -1771,7 +1776,7 @@ a.back_to_top {
   height: 0;
   background: #cea752;
   transition: 0.5s;
-}
+} */
 .recommended .recommended-box:hover:before {
   height: 100%;
 }
@@ -2162,7 +2167,11 @@ a.back_to_top {
   padding: 5px 0;
   font-weight: 700;
 }
-.vigo-price .price-package:before {
+.vigo-pricing-table {
+  border: 2px solid #cea752;;
+}
+
+/* .vigo-price .price-package:before {
   content: "";
   position: absolute;
   top: 50%;
@@ -2171,7 +2180,7 @@ a.back_to_top {
   width: 100%;
   height: 2px;
   background: transparent;
-}
+} */
 .vigo-price .price-package p {
   background: #fff;
   display: inline-block;
@@ -2226,7 +2235,7 @@ a.back_to_top {
   .vigo-price li .pricing {
     font-weight: 900;
     font-size: 34px;
-    padding-bottom: 23px;
+    padding-bottom: 3px;
     padding-top: 10px;
     color: #333740;
   }
@@ -2235,9 +2244,9 @@ a.back_to_top {
     transition: 0.5s;
   }
   .vigo-price .vigo-pricing-table:hover {
-    transform: translateY(-7px);
-    border-bottom: 7px solid #cea752;
-    box-shadow: 0px 0px 44px -8px rgba(51, 51, 51, 0.34118);
+    /* transform: translateY(-7px); */
+    /* border-bottom: 7px solid #cea752; */
+    box-shadow: -5px -5px 44px -8px rgba(51, 51, 51, 0.34118);
   }
   .vigo-price .pricing-icon-box {
     margin-bottom: 40px;
@@ -2339,7 +2348,7 @@ a.back_to_top {
 /*---------- Ingredients Section---------*/
 .ingredients .accordion-menu {
   padding: 10px;
-  color: #333740;
+  color: #7d7f84;
   font-weight: 700;
 }
 .ingredients .item {
@@ -2778,5 +2787,19 @@ img{
 
 }
 
+/* ingredients facts */
+.ingredients{
+  background-color: #092A4B;
+  background-image: url("https://cdn.shopify.com/s/files/1/0554/4748/6669/files/work_border.png");
+  background-position: top;
+  background-repeat: no-repeat;
+}
 
-
+/* Chart area */
+.Chart_area{
+  background: url("https://cdn.shopify.com/s/files/1/0554/4748/6669/files/white-bg.jpg");
+  height: 70vh;
+  background-size: 100%;
+  background-attachment: fixed;
+   
+}
