--- a/css/style.css
+++ b/css/style.css
@@ -363,6 +363,7 @@ section {
 
 .page-title {
   position: relative;
+  margin-bottom: 55px;
 }
 .page-title:before {
   content: "";
@@ -1122,14 +1123,19 @@ footer .footer-box-border:before {
   }
 }
 /*---------- Call To Action Section---------*/
-a.back_to_top {
-    width: 40px;
+.back_to_top{
+    width: 80px;
     height: 40px;
     line-height: 40px;
     background: #fff;
     border-radius: 5px;
     color: #cea752;
     font-size: 20px;
+    margin-left: 55px;
+  
+}
+.back_to_top:hover{
+  color: #092A4B;
 }
 .footer-logo a:first-child {
     padding-right: 100px;
@@ -1243,7 +1249,7 @@ a.back_to_top {
 }
 /*---------- features Section---------*/
 .features {
-  padding: 17px 0;
+  padding: 17px 20px;
   border-bottom: 1px solid #f3f3f3;
 }
 
@@ -1252,34 +1258,39 @@ background: url("https://cdn.shopify.com/s/files/1/0554/4748/6669/files/result_i
 
 background-repeat: no-repeat;
 background-size: cover;
-
+width:100% ;
+height:500px;
 }
 .fetures_box_2{
 background: url("https://cdn.shopify.com/s/files/1/0554/4748/6669/files/result_img2.jpg");
 
 background-repeat: no-repeat;
 background-size: cover;
-
+width:100% ;
+height:500px;
 }
 .fetures_box_3{
 background: url("https://cdn.shopify.com/s/files/1/0554/4748/6669/files/result_img3.jpg");
-
+width:100% ;
 background-repeat: no-repeat;
 background-size: cover;
 color: white;
+height:500px;
 
 }
 .fetures_box_4{
 background: url("https://cdn.shopify.com/s/files/1/0554/4748/6669/files/result_img4.jpg");
-
+width:100% ;
 background-repeat: no-repeat;
 background-size: cover;
 color: white;
+height:500px;
 }
 .features .features-box {
   padding-bottom: 20px;
   padding-top: 11px;
 }
+
 .features .features-box:last-child {
   padding-bottom: 0;
 }
@@ -2826,7 +2837,7 @@ img{
 
 /* carrosel img */
 .testimonial-box_img {
-  height: 350px;
+  height: 550px;
 }
 .carodsel_media{
   border: 5px solid rgb(39, 37, 37);
@@ -2853,4 +2864,3 @@ img{
    
 }
 
-/* scroll button */
